--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/vue-fontawesome": "^3.0.3",
     "@popperjs/core": "^2.11.8",
+    "@tomtom-international/web-sdk-maps": "^6.23.0",
+    "@tomtom-international/web-sdk-plugin-pancontrols": "^2.1.6",
+    "@tomtom-international/web-sdk-plugin-zoomcontrols": "^2.1.6",
     "axios": "^1.5.0",
     "bootstrap": "^5.3.1",
     "vue": "^3.3.4",
